# python-project-49

./: .gitignore  Makefile  README.md  braincalc.cast  braingcd.cast  brainprime.cast  brainprog.cast  demo.cast  pyproject.toml
brain_games/: cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  general_structure.py
