[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "5 games for console"
authors = ["anton9760 <anton2610@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.10.12",
  "Topic :: Games/Entertainment :: Games"
]

repository = "https://github.com/anoleynikov/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
